remove submit button container's fixed height
this fixed the problem when submit text is longer than 1 line.
previously the button will overlap with the one below it.

this commit also set absolute positioning of that stupid santa icon to
make it less annoying.

--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -160,6 +160,7 @@
 .morelink {
   border: none;
   background: none;
+  height: auto;
 
   &:hover {
     background: none !important;
