--- a/scss/userstyle/_buttons.scss
+++ b/scss/userstyle/_buttons.scss
@@ -4,3 +4,12 @@
   padding-bottom: 3px;
 }
 
+.sidebox.holiday_shopping > .morelink > a {
+  color: $button-fg;
+
+  &::before {
+    position: absolute;
+    left: 12px;
+    top: 2px;
+  }
+}
