--- a/terriblename.css
+++ b/terriblename.css
@@ -339,6 +339,7 @@ input[type=submit]:active, .res .RESshortcutside:active,
 .morelink {
   border: none;
   background: none;
+  height: auto;
 }
 .morelink:hover {
   background: none !important;
